--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -1,52 +1,110 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
- 
-    color: black;
-  }
-  .logo {
-    display: flex;
-    font-weight: 500;
-    font-size: 14px;
-    align-items: center;
-    gap: 0.5rem; /* Add spacing between the image and text */
-  } 
-  .Register{
-    border: 1px solid rgba(149, 36, 255, 1);
-    display: flex;
-   margin-right: 45px; 
-    padding: 4px 15px;
-    color:  rgba(149, 36, 255, 1);
-    margin-left: 25px;
-    border-radius: 10px;
-  } 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+
+  color: black;
+}
+.logo {
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  align-items: center;
+  gap: 0.5rem; /* Add spacing between the image and text */
+}
+.Register {
+  border: 1px solid rgba(149, 36, 255, 1);
+  display: flex;
+  margin-right: 45px;
+  padding: 4px 15px;
+  color: rgba(149, 36, 255, 1);
+  margin-left: 25px;
+  border-radius: 10px;
+}
 .logoImage {
   width: 40px; /* Adjust the size of the image */
   height: 40px;
 
   object-fit: cover; /* Ensures the image scales properly */
 }
-.Register:hover{
-  background:  rgba(149, 36, 255, 1);
+.Register:hover {
+  background: rgba(149, 36, 255, 1);
   color: white;
 }
-.homelink{
-  color:  rgba(149, 36, 255, 1);
+.homelink {
+  color: rgba(149, 36, 255, 1);
 }
+.navLinks {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.navLinks li a {
+  text-decoration: none;
+
+  font-size: 13px;
+}
+.icon {
+  font-size: 10px;
+  margin: 3px;
+}
+@media (max-width: 767px) {
+  .navbar {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .logo {
+    font-size: 16px; /* Slightly larger font size for better visibility */
+    margin-bottom: 1rem;
+  }
+
   .navLinks {
-    list-style: none;
     display: flex;
-    gap: 1.5rem;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    align-items: center;
   }
-  
+
   .navLinks li a {
-    text-decoration: none;
-  
-    font-size: 13px;
+    font-size: 14px; /* Adjust font size for better readability */
   }
-  .icon{
-    font-size: 10px;
-    margin: 3px;
+
+  .Register {
+    margin-right: 0;
+    margin-left: 0;
+    padding: 8px 20px;
+    width: 100%; /* Full width */
+    text-align: center;
   }
+}
+@media (min-width: 768px) {
+  .navbar {
+    padding: 1rem 2rem;
+    justify-content: space-between;
+  }
+
+  .logo {
+    font-size: 18px; /* A bit larger font for medium screens */
+    gap: 1.5rem; /* More space between logo and text */
+  }
+
+  .navLinks {
+    display: flex;
+    gap: 2rem; /* More space between links */
+    margin-top: 10px;
+  }
+
+  .Register {
+    margin-right: 45px;
+    padding: 8px 20px;
+  }
+
+  .logoImage {
+    width: 50px; /* Slightly larger logo on medium screens */
+    height: 50px;
+  }
+}
