--- a/src/app/styles/Section3.module.css
+++ b/src/app/styles/Section3.module.css
@@ -13,7 +13,20 @@
 .left {
   flex: 1;
 }
-
+.icon {
+  font-size: 10px;
+  margin-left: 3px;
+}
+.registerButton {
+  background-color: transparent;
+  color: rgba(166, 73, 255, 1);
+  border: 1px solid rgba(166, 73, 255, 1);
+  padding: 0.7rem 1.5rem;
+  border-radius: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 1rem;
+}
 .logo {
   display: block;
 }
@@ -51,7 +64,14 @@
 }
 
 .paragraph {
-  font-size: 1rem;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18.8px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+
   margin-bottom: 1rem;
 }
 
@@ -69,5 +89,10 @@
   }
   100% {
     opacity: 1;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .logo {
+    display: none;
   }
 }
